--- a/index.html
+++ b/index.html
@@ -1014,132 +1014,35 @@
                                 <h4 id="defaultdefpunkt">1. Дефолт</h4>
                                 <div class="defaultpunkt flex">
                                     <img src="punkt.jpg" alt="punkt">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui laborum magni ex
-                                        accusantium
-                                        reiciendis aut, praesentium labore aliquid, inventore, odio quas impedit at
-                                        expedita
-                                        recusandae
-                                        iste pariatur? Recusandae animi quae, quasi quisquam reiciendis voluptatibus
-                                        commodi
-                                        dignissimos, doloremque laboriosam fugit molestiae perferendis mollitia minus
-                                        alias
-                                        nisi
-                                        quaerat
-                                        totam corrupti. Error nihil sit ut voluptatem adipisci! Facere debitis obcaecati
-                                        commodi, sequi
-                                        odit eius rerum sunt ex. Eaque architecto ipsum sed iste voluptatem perspiciatis
-                                        magnam
-                                        aliquam
-                                        provident itaque suscipit deleniti, ut optio inventore, ab neque aut! Doloremque
-                                        rerum
-                                        excepturi
-                                        illum sapiente architecto asperiores soluta! Totam sint doloribus ullam nesciunt
-                                        provident.
-                                        Dolor, porro facilis.</p>
+                                    <p>Вирбари и Ферла играют двойку, Арукору соло верх, Квилион и Аллоин играют
+                                        единицу. Ярик даёт смок под кв.</p>
                                 </div>
                                 <h4 id="stak2punkt">2. Стак двойки</h4>
                                 <div class="stak2punkt flex">
                                     <img src="punkt.jpg" alt="punkt">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo veritatis
-                                        minus
-                                        cum
-                                        ratione
-                                        beatae esse delectus nam tempora velit dolorem numquam eum quia itaque id
-                                        inventore,
-                                        obcaecati
-                                        quo dolorum debitis suscipit repellat, eius perspiciatis, cumque expedita! Aut
-                                        mollitia
-                                        corrupti
-                                        iure velit error, reiciendis temporibus! Nesciunt sint minus cumque blanditiis
-                                        doloribus? Natus
-                                        deleniti id ad asperiores esse consequuntur iste eaque reiciendis consequatur,
-                                        tempore,
-                                        dolorum
-                                        doloribus. Quia amet sequi voluptatum exercitationem cumque perferendis pariatur
-                                        dolorum
-                                        quaerat, eaque nobis, animi eos nulla delectus quo dicta aut odio ullam. Beatae
-                                        excepturi
-                                        repudiandae ullam, quod et optio sequi ipsam quia tempora, officia, quisquam
-                                        incidunt
-                                        culpa!</p>
+                                    <p>Арукору верх (шт даёт палец), Вирбари на дуге (плент), Аллоин справа холодоса,
+                                        Ферла под холодосом. Если фаст заход, то смоки откидываете на упор</p>
                                 </div>
                                 <h4 id="stak1punkt">3. Стак единицы</h4>
                                 <div class="stak1punkt flex">
                                     <img src="punkt.jpg" alt="punkt">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo veritatis
-                                        minus
-                                        cum
-                                        ratione
-                                        beatae esse delectus nam tempora velit dolorem numquam eum quia itaque id
-                                        inventore,
-                                        obcaecati
-                                        quo dolorum debitis suscipit repellat, eius perspiciatis, cumque expedita! Aut
-                                        mollitia
-                                        corrupti
-                                        iure velit error, reiciendis temporibus! Nesciunt sint minus cumque blanditiis
-                                        doloribus? Natus
-                                        deleniti id ad asperiores esse consequuntur iste eaque reiciendis consequatur,
-                                        tempore,
-                                        dolorum
-                                        doloribus. Quia amet sequi voluptatum exercitationem cumque perferendis pariatur
-                                        dolorum
-                                        quaerat, eaque nobis, animi eos nulla delectus quo dicta aut odio ullam. Beatae
-                                        excepturi
-                                        repudiandae ullam, quod et optio sequi ipsam quia tempora, officia, quisquam
-                                        incidunt
-                                        culpa!</p>
+                                    <p>Ферла под бочкой, даёт смок под кв, Квилион лежит за деревом на поляне, Вирбари
+                                        на дуге, помогает принимать заход, Аллоин играет под кв, Арукору соло под
+                                        двойкой</p>
                                 </div>
                                 <h4 id="push1punkt">4. Пуш единицы</h4>
                                 <div class="push1punkt flex">
                                     <img src="punkt.jpg" alt="punkt">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo veritatis
-                                        minus
-                                        cum
-                                        ratione
-                                        beatae esse delectus nam tempora velit dolorem numquam eum quia itaque id
-                                        inventore,
-                                        obcaecati
-                                        quo dolorum debitis suscipit repellat, eius perspiciatis, cumque expedita! Aut
-                                        mollitia
-                                        corrupti
-                                        iure velit error, reiciendis temporibus! Nesciunt sint minus cumque blanditiis
-                                        doloribus? Natus
-                                        deleniti id ad asperiores esse consequuntur iste eaque reiciendis consequatur,
-                                        tempore,
-                                        dolorum
-                                        doloribus. Quia amet sequi voluptatum exercitationem cumque perferendis pariatur
-                                        dolorum
-                                        quaerat, eaque nobis, animi eos nulla delectus quo dicta aut odio ullam. Beatae
-                                        excepturi
-                                        repudiandae ullam, quod et optio sequi ipsam quia tempora, officia, quisquam
-                                        incidunt
-                                        culpa!</p>
+                                    <p>Ближний мед по спавну к верху даёт палец Арукору, Вирбари и Ферла пушат
+                                        кв, Квилион и Аллоин пушат клумбы, Квилион даёт смок под дальние клумбы</p>
                                 </div>
                                 <h4 id="push2punkt">5. Пуш двойки</h4>
                                 <div class="push2punkt flex">
                                     <img src="punkt.jpg" alt="punkt">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo veritatis
-                                        minus
-                                        cum
-                                        ratione
-                                        beatae esse delectus nam tempora velit dolorem numquam eum quia itaque id
-                                        inventore,
-                                        obcaecati
-                                        quo dolorum debitis suscipit repellat, eius perspiciatis, cumque expedita! Aut
-                                        mollitia
-                                        corrupti
-                                        iure velit error, reiciendis temporibus! Nesciunt sint minus cumque blanditiis
-                                        doloribus? Natus
-                                        deleniti id ad asperiores esse consequuntur iste eaque reiciendis consequatur,
-                                        tempore,
-                                        dolorum
-                                        doloribus. Quia amet sequi voluptatum exercitationem cumque perferendis pariatur
-                                        dolorum
-                                        quaerat, eaque nobis, animi eos nulla delectus quo dicta aut odio ullam. Beatae
-                                        excepturi
-                                        repudiandae ullam, quod et optio sequi ipsam quia tempora, officia, quisquam
-                                        incidunt
-                                        culpa!</p>
+                                    <p>Три типа лезут верх (Вирбари, Ферла и Квилион), Аллоин смотрит дугу, Арукору
+                                        выход
+                                        с теплицы, типы снизу ждут пока три типа сверху пройдут дальше и в тайминг
+                                        выходят с теплицы и дуги</p>
                                 </div>
                                 <h3>Атака</h3>
                                 <h4 id="def2punkt">1. Дефолт двойка</h4>
